--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "@tailwindcss/forms": "^0.5.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0"
