--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^2.1.0-preview.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
