--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.0.12",
-    "@tailwindcss/forms": "^0.5.3",
-    "next": "latest",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwind-scrollbar": "^2.1.0-preview.0",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
-  }
+ "private": true,
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start"
+ },
+ "dependencies": {
+  "@heroicons/react": "^2.0.12",
+  "@tailwindcss/forms": "^0.5.3",
+  "firebase": "^9.12.0",
+  "next": "latest",
+  "next-auth": "4.13.0",
+  "react": "18.1.0",
+  "react-dom": "18.1.0"
+ },
+ "devDependencies": {
+  "@types/node": "17.0.35",
+  "@types/react": "18.0.9",
+  "@types/react-dom": "18.0.5",
+  "autoprefixer": "^10.4.7",
+  "postcss": "^8.4.14",
+  "tailwind-scrollbar": "^2.1.0-preview.0",
+  "tailwind-scrollbar-hide": "^1.1.7",
+  "tailwindcss": "^3.1.2",
+  "typescript": "4.7.2"
+ }
 }
