--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "next": "latest",
   "next-auth": "4.13.0",
   "react": "18.1.0",
-  "react-dom": "18.1.0"
+  "react-dom": "18.1.0",
+  "recoil": "^0.7.6"
  },
  "devDependencies": {
   "@types/node": "17.0.35",
