--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "start": "next start"
  },
  "dependencies": {
+  "@headlessui/react": "^1.7.3",
   "@heroicons/react": "^2.0.12",
   "@tailwindcss/forms": "^0.5.3",
+  "axios": "^1.1.2",
   "firebase": "^9.12.0",
   "next": "latest",
   "next-auth": "4.13.0",
