--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
   "next-env.d.ts",
   "**/*.ts",
   "**/*.tsx",
-  "pages/api/auth/[...nextauth].js"
+  "pages/api/auth/[...nextauth].js",
+  "hooks/useSelectBreed.js"
  ],
  "exclude": ["node_modules"]
 }
